--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -78,74 +78,124 @@
 
 <body>
 
-<div class="container">
-  <div class="row" [style.background-image]="'linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://image.tmdb.org/t/p/w1280/' + filmdetails.backdrop_path + ') center center / cover'">
-    <div class="col-md-4" >
-      <img style="height: 100%; width: 100%;" src="https://image.tmdb.org/t/p/w1280/{{ filmdetails.poster_path }}"
-           alt="{{ filmdetails.title }}" class="img-fluid">
+
+
+
+
+<div class="container mt-2">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="movie-poster-container">
+        <img class="movie-poster" src="https://image.tmdb.org/t/p/w500/{{ filmdetails.poster_path }}"
+             alt="{{ filmdetails.title }}" />
+      </div>
     </div>
     <div class="col-md-8">
-      <h2 class="mb-4">{{ filmdetails.title }}</h2>
-      <p class="lead"><strong>Release Date:</strong> {{ filmdetails.release_date }}</p>
-      <p><strong>Overview:</strong> {{ filmdetails.overview }}</p>
-      <p><strong>Runtime:</strong> {{ filmdetails.runtime }} minutes</p>
-      <p><strong>Popularity:</strong> {{ filmdetails.popularity }}</p>
-      <p><strong>Vote Average:</strong> {{ filmdetails.vote_average }}</p>
-      <p><strong>Budget:</strong> {{ filmdetails.budget }}$</p>
+      <div class="film-details" style="background-color: black; color: white; padding: 20px;">
+        <h2 class="mb-4">{{ filmdetails.title }}</h2>
+        <p class="lead"><strong>Release Date:</strong> {{ filmdetails.release_date }}</p>
+        <p class="tagline"><strong></strong> {{ filmdetails.tagline }}</p>
+        <p><strong></strong> {{ filmdetails.overview }}</p>
+        &nbsp;&nbsp; &nbsp;
+        <p><strong>Runtime:</strong> {{ filmdetails.runtime }} minutes</p>
+        <p><strong>Popularity:</strong> {{ filmdetails.popularity }}</p>
+        <p><strong>Vote Average:</strong> {{ filmdetails.vote_average }}</p>
+
+        <p><strong>Budget:</strong> {{ filmdetails.budget }}$</p>
+
+        <!-- Additional Information -->
+        <div class="additional-info">
+          <p><strong>Original Title:</strong> {{ filmdetails.original_title }}</p>
+          <p><strong>Language:</strong> {{ filmdetails.original_language }}</p>
+          <p><strong>Adult:</strong> {{ filmdetails.adult ? 'Yes' : 'No' }}</p>
+          <p><strong>Vote Count:</strong> {{ filmdetails.vote_count }}</p>
+          <!-- Add more details as needed -->
+        </div>
+      </div>
+
       <div *ngFor="let gn of genre" class="d-inline-block mr-2">
         <span class="badge badge-primary">{{ gn.name }}</span>
       </div>
+      <!--<div class="NgxEditor__Wrapper mb-5 mt-2" style="height: 200px">
+        <ngx-editor-menu [editor]="editor" > </ngx-editor-menu>
+        <ngx-editor [editor]="editor" [ngModel]="html"  [disabled]="false"  [placeholder]="'Type here...'"></ngx-editor>
+      </div>
+      <button class="btn btn-primary" (click)="submitEditorContent()">Submit Content</button>-->
+
     </div>
   </div>
 </div>
+
+
+
+
 
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-8">
-      <h1 class="mb-3">Comments</h1>
+      <h3 class="mb-3"></h3>
       <!-- Add a form for submitting comments -->
-      <form (ngSubmit)="submitComment()">
+      <form (ngSubmit)="submit_commentaire()" #commentForm="ngForm">
         <div class="mb-3">
-          <label for="nom" class="form-label">Nom</label>
-          <input type="text" class="form-control" id="nom" [(ngModel)]="formData.nom" name="nom" required>
+          <label for="nom" class="form-label">Email</label>
+          <input type="text" class="form-control" id="nom" [(ngModel)]="formData.nom" name="nom" [readonly]="isAuthenticated" placeholder="Enter a Title">
         </div>
         <div class="mb-3">
           <label for="comment" class="form-label">Leave a Comment:</label>
-          <div class="NgxEditor__Wrapper" style="height: 200px" >
-            <ngx-editor-menu [editor]="editor"> </ngx-editor-menu>
-            <ngx-editor [editor]="editor" [ngModel]="html" [disabled]="false" id="comment"
-                        [(ngModel)]="formData.comment" name="comment" [placeholder]="'Type here...'"></ngx-editor>
+          <div class="ngx-editor-container">
+            <ngx-editor
+              style="height: 200px"
+              [editor]="editor"
+              [ngModel]="html"
+              [disabled]="false"
+              id="comment"
+              [(ngModel)]="formData.comment"
+              name="comment"
+              [placeholder]="'Type here...'"
+              required
+            ></ngx-editor>
+          </div>
+          <div *ngIf="commentForm.controls['comment']?.invalid && (commentForm.controls['comment']?.dirty || commentForm.controls['comment']?.touched)">
+            <small class="text-danger">Please enter a comment.</small>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary" >Submit Comment</button>
-      </form>
 
-      <div class="container mt-4 mb-4">
-        <div class="row">
-          <div class="">
-            <h1 class="mb-3">Comments</h1>
-            <ul class="list-group">
-              <li class="list-group-item" *ngFor="let comment of comments;  let i = index">
-                <div class="card mb-2">
-                  <div class="card-body">
-                    <p class="card-text">
-                      <strong>Name:</strong> {{ comment.username }}
-                    </p>
-                    <div class="card-text" [innerHTML]="sanitizeHTML(comment.data)"></div>
-                    <!-- Add a button to delete the message -->
-                    <button type="button" class="btn btn-danger" (click)="deleteComment(i)">
-                      Delete
-                    </button>
-                  </div>
-                </div>
-              </li>
-            </ul>
+        <button type="submit" class="btn btn-primary" [disabled]="!commentForm.valid || !formData.comment" (click)="onAddComment()">Submit Comment</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="container mt-4 mb-4">
+  <h3 class="form-label">Comments Section</h3>
+  <div class="comment-section">
+    <div *ngFor="let comment of commentaireFiltred" class="comment">
+      <div class="comment-header">
+
+        <div class="comment-info">
+          <strong>{{ comment.name }}</strong>
+          <div class="comment-actions">
+            <button
+              *ngIf="comment.name === userLoginService.getEmailFromLocalStorage()"
+              type="button"
+              class="btn btn-danger"
+              (click)="deleteComment(comment.id)"
+            >
+              Delete
+            </button>
           </div>
         </div>
+      </div>
+      <div class="comment-body">
+        <p [innerHTML]="sanitizeHTML(comment.commentaire)"></p>
       </div>
     </div>
   </div>
 </div>
+
+
 
 
 <!-- Bootstrap JS (optional) -->
